     28) Changed the capture resampling code for PortAudio and PulseAudio to
         use libsamplerate's callback API.
     29) Use fileselect filter values.  Made the audio format independent of 
         the filename suffix in the generate/capture/playback code; 
         uses the fileselector filter value instead.
     30) Update fileselector - Fileselector now remembers previous directory.

      
2.10.3)
      1) Corrected memory leak bug.
2.10.2
      1) Bug fix for QRZ CDROM access
2.10.1
      1) Fixed bug in MODEM macro that caused TX to hang
      2) Fixed sound_init crash.  This would happen with an empty 
         progdefaults.OSSdevice (e.g. new install) on a system without 
         OSS devices.
      3) Deleted local copy of libsamplerate as it was deprecated.
      4) Deleted the fast text widgets that were a part of the early versions
         of fldigi and had been retained for some performance improvement.
         Recent changes to the more complete text widgets have equalled the
         performance of the fast text widgets.
2.10  1) Added history decoding (ctrl-Left-click in waterfall). Available after
         tracking has started.  This does not start a new signal acquisition.
      2) Rewrote Psk and ViewPsk to use shared signal detection class
      3) Made OSS optional and added autoconf macro to detect its presence
      4) The volume sliders will now be hidden if the mixer is disabled
      5) Added a <MODEM> macro that changes the current modem
      6) Added "Log File" status to saved application state
      7) Added "use default audio device" if h/w changes
      8) Fixes to ringbuffer / audio backends
      9) Fixes to mfsk picture mode decoding
     10) Changed frequency2 data file format, downward compatible
     11) Added HELL80, FELD_SLOWHELL, FELD_HELLX5 and FELD_HELLX9 modems
     12) Added Pulse Audio support with support for separate capture and
         playback devices and sample rates