@@ -83,7 +83,6 @@ void psk::rx_init()
 	bitclk = 0;
 	freqerr = 0.0;
 	if (mailserver && progdefaults.PSKmailSweetSpot) sigsearch = SIGSEARCH;
-	set_scope_mode(Digiscope::PHASE);
 	put_MODEstatus(mode);
 }
 
@@ -99,6 +98,7 @@ void psk::init()
 {
 	modem::init();
 	restart();
+	set_scope_mode(Digiscope::PHASE);
 	rx_init();
 }
 
